# dmcsharp

./: CMakeLists.txt  README.md  build.bat  build.sh
src/: dmrc.cs  main.cs
src/proto/: Person.cs  buildmerge.bat  buildmerge.sh
